--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
             </div>
         </nav>
 
+        <!-- Apresentação do Site -->
     <div class="main">
 <h4 class="h4">Olá, meu nome é</h4>
 <h1 class="h1">Paulo <span>Gabriel</span></h1>
 <h3 class="h3 typing-animation">Eu sou desenvolvedor Web .</h3>
+
+<!-- Contatos -->
+
 <div class="contatos">
 <a href="https://www.linkedin.com/in/paulo-gabriel-931534242/" target="_blank">
     <div class="principal__botao-linkedin">
@@ -50,6 +54,27 @@
   </a>
 </div>
     </div> <!-- main -->
+
+    <!-- Ball Animation HTML -->
+        <div class="container-ball">
+            <div class="ball ball-1"></div>
+            <div class="ball ball-2"></div>
+          </div>
+
+          <!--RGB Ball Animation-->
+          <svg>
+            <filter id="gooey">
+                <feGaussianBlur in="SourceGraphic" stdDeviation="5"/>
+                <feColorMatrix values="
+                1 0 0 0 0
+                0 1 0 0 0
+                0 0 1 0 0
+                0 0 0 1 0
+                "/>
+            </filter>  
+        </svg>
+    </div>
+
 
 </section>
 
